lb2/oc/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-database
  labels:
    app: counter-database
    app.kubernetes.io/part-of: counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: counter-database
    spec:
      volumes:
        - name: counter-database-data
          persistentVolumeClaim:
            claimName: counter-database-data
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: counter-database
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: counter-database-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          image: 'registry.redhat.io/rhel8/postgresql-15:latest'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend # Verbindung zum Pod
  template:
    metadata:
      labels:
        app: counter-backend 
    spec:
      containers:
      - name: counter-backend
        resources: {}
        ports:
        - containerPort: 8080
          protocol: TCP
        image: ghcr.io/marzonev/counter-backend:v1
        imagePullPolicy: Always
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend # Verbindung zum Pod
  template:
    metadata:
      labels:
        app: counter-frontend 
    spec:
      containers:
      - name: counter-frontend
        resources: {}
        ports:
        - containerPort: 3000
          protocol: TCP
        - containerPort: 3100
          protocol: TCP
        image: ghcr.io/marzonev/counter-frontend:v1
        imagePullPolicy: Always
