lb2/oc/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter-app
spec:
  to:
    kind: Service # Verbindung zum Service
    name: counter-backend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: counter-app
spec:
  to:
    kind: Service # Verbindung zum Service
    name: counter-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
